# trdelnik

./: .gitignore  Cargo.toml  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: docs.yml
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  lib.rs
crates/cli/src/command/: fuzz_test.rs  test.rs
crates/cli/src/command/fuzz_test/: command.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  commander.rs  lib.rs  program_client_generator.rs  tester.rs  validator.rs
crates/client/src/templates/trdelnik-tests/: Cargo.toml.tmpl  test.rs
crates/client/tests/test_data/: expected_client_code.rs
crates/fuzz/: Cargo.toml
crates/fuzz/src/: builder.rs  commander.rs  lib.rs  random.rs  writer.rs
crates/fuzz/src/templates/: test.rs
crates/test/src/: lib.rs
crates/test/tests/expand/: basic.expanded.rs  with_root.expanded.rs
docs/: book.toml
docs/src/: SUMMARY.md  fuzz.md  installation.md  motivation.md  usage.md
docs/src/cli/: README.md  build.md  explorer.md  init.md  keypair.md  test.md
examples/escrow/programs/escrow/: Cargo.toml
examples/escrow/programs/escrow/src/: lib.rs
examples/escrow/trdelnik-tests/: Cargo.toml
examples/escrow/trdelnik-tests/tests/: test.rs
examples/turnstile/.program_client/src/: lib.rs
examples/turnstile/trdelnik-tests/: Cargo.toml
examples/turnstile/trdelnik-tests/fuzz-tests/: fuzz_test.rs
examples/turnstile/trdelnik-tests/tests/: test.rs
