[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
anchor-spl = "^0.27.0"

[dev-dependencies.trdelnik-client]
path = "../../../crates/client"

[dev-dependencies.program_client]
path = "../.program_client"

[dev-dependencies.escrow]
path = "../programs/escrow"

[dependencies]
crossbeam-channel = "0.5.7"
solana-core = "1.15.2"
solana-faucet = "1.15.2"
solana-logger = "1.15.2"
solana-program = "1.15.2"
solana-rpc = "1.15.2"
solana-streamer = "1.15.2"
solana-validator = "1.15.2"
