[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dependencies]
fehler = "1.0.0"
rstest = "0.12.0"

[dependencies.trdelnik-client]
path = "../../../crates/client"

[dependencies.trdelnik-fuzz]
path = "../../../crates/fuzz"

[dependencies.program_client]
path = "../.program_client"

[dependencies.turnstile]
path = "../programs/turnstile"

[[bin]]
name = "fuzz_test"
path = "fuzz-tests/fuzz_test.rs"
test = false
doc = false
            
